kondunite/examples/manifests/wordpress.yaml
apiVersion: v1
kind: Service
metadata:
  name: wordpress
  labels:
    app: wordpress
spec-gke:
  ports:
    - port: 80
  selector:
    app: wordpress
    tier: frontend
  type: LoadBalancer
spec-repl:
  ports:
    - port: 80
  selector:
    app: wordpress
    tier: frontend
  type: ClusterIP
---
apiVersion: extensions/v1beta1
targetsOnly: repl
kind: Ingress
metadata:
  name: wordpress
spec:
  rules:
    - http:
        paths:
          - path: /
            backend:
              serviceName: wordpress
              servicePort: 80
---
apiVersion: apps/v1
dependencies:
  - mysql.yaml
  - filesystem.yaml
kind: Deployment
metadata:
  name: wordpress
  labels:
    app: wordpress
spec:
  selector:
    matchLabels:
      app: wordpress
      tier: frontend
  strategy:
    type: Recreate
  template:
    metadata:
      labels:
        app: wordpress
        tier: frontend
    spec:
      containers:
        - image: wordpress:4.8-apache
          name: wordpress
          ports:
            - containerPort: 80
              name: wordpress
          volumeMounts:
            - name: wordpress-persistent-storage
              mountPath: /var/www/html
      volumes:
        - name: wordpress-persistent-storage
          persistentVolumeClaim:
            claimName: wp-pv-claim
      volumes-repl:
        - name: wordpress-persistent-storage
          flexVolume:
            driver: ceph.rook.io/rook
            fsType: ceph
            options:
              fsName: rook-shared-fs
              clusterNamespace: rook-ceph
              path: '/wordpress'
